--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Property advertising platform",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --exec babel-node server/index.js",
+    "build": "mkdir dist && babel server -s -d dist",
+    "test": "nyc --reporter=html --reporter=text mocha --require @babel/register --exit",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -15,5 +18,27 @@
   "bugs": {
     "url": "https://github.com/Moses-Omondi/PropertyPro-lite/issues"
   },
-  "homepage": "https://github.com/Moses-Omondi/PropertyPro-lite#readme"
+  "homepage": "https://github.com/Moses-Omondi/PropertyPro-lite#readme",
+  "dependencies": {
+    "cloudinary": "^1.14.0",
+    "connect-multiparty": "^2.2.0",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "coveralls": "^3.0.5",
+    "eslint": "^6.0.1",
+    "mocha": "^6.1.4",
+    "mocha-lcov-reporter": "^1.3.0",
+    "nodemon": "^1.19.1",
+    "nyc": "^14.1.1"
+  }
 }
