--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "'prolite'",
+  "name": "prolite",
   "version": "1.0.0",
   "description": "Property advertising platform",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon --exec babel-node server/index.js",
+    "start": "nodemon --exec babel-node server/server.js",
     "build": "mkdir dist && babel server -s -d dist",
     "test": "nyc --reporter=html --reporter=text mocha --require @babel/register --exit",
     "coveralls": "nyc report --reporter=text-lcov | coveralls"
@@ -36,6 +36,7 @@
     "chai-http": "^4.3.0",
     "coveralls": "^3.0.5",
     "eslint": "^6.0.1",
+    "eslint-config-airbnb-base": "^13.2.0",
     "mocha": "^6.1.4",
     "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.19.1",
